--- a/Hotel-Managerment-Project-Official-Last/nbproject/private/private.properties
+++ b/Hotel-Managerment-Project-Official-Last/nbproject/private/private.properties
@@ -1,7 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.itext.jar=D:\\APTECH\\Java\\Java-Project\\Java-Project-Sample\\Hotel-Managerment-Project-Official-Last\\itext.jar
+file.reference.itext.jar=C:\\Users\\Thai Son\\Desktop\\Aptech\\JavaProjectSample\\Hotel-Managerment-Project-Official-Last\\itext.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Thai Son\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
